<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardElevation="10dp"
    app:cardCornerRadius="12dp"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="311dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/first_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="Delete Icon"
            android:paddingEnd="4dp"
            android:src="@drawable/baseline_delete_outline_24" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="270dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="4dp"

            android:text="@string/price"
            android:textColor="@android:color/black"
            android:textSize="27dp" />

        <TextView
            android:id="@+id/shirt_sizes_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_clothes_size"
            android:textColor="@android:color/black"
            android:textSize="16sp" />


        <RadioGroup
            android:id="@+id/radio_group_clothes_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
        </RadioGroup>

        <TextView
            android:id="@+id/shoe_sizes_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="8dp"
            android:text="@string/title_shoes_sizes"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radio_group_shoes_size"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">


        </RadioGroup>


        <ImageView
            android:id="@+id/second_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:contentDescription="Add Icon"
            android:paddingStart="8dp"
            android:src="@drawable/baseline_add_24" />
    </LinearLayout>
</androidx.cardview.widget.CardView>